fix: Improve spacing and alignment on desktop and mobile

--- a/main.css
+++ b/main.css
@@ -11,6 +11,21 @@ body {
   width: 80%;
   display: flex;
   justify-content: space-evenly;
+  margin-top: 25px;
+}
+
+#myLinks a:link, #myLinks a:visited {
+  color: #000;
+}
+
+#myLinks a {
+  text-decoration: none;
+}
+
+#myLinks a:hover {
+  color: #588157;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 .mobile-nav {
@@ -19,6 +34,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Permanent Marker', cursive;
+  margin: 0;
 }
 
 /* Navigation */
@@ -31,6 +47,10 @@ main {
 }
 
 /* Header */
+header {
+  margin: 5%;
+}
+
 header .container {
   text-align: center;
 }
@@ -79,12 +99,16 @@ main h2 {
 }
 
 .experience img {
-  width: 250px;
+  width: 200px;
   height: auto;
 }
 
 
 /* ##### Project ##### */
+.project {
+  margin-bottom: 10%;
+}
+
 .project .container {
   display: flex;
   align-items: center;
@@ -108,12 +132,16 @@ main h2 {
   display: flex;
   justify-content: space-evenly;
   list-style-type: none;
+  margin-top: 5%;
+  flex-wrap: wrap;
+  padding: 0;
 }
 
 .project li {
   color: #fff;
   background-color: #000;
-  padding: 1%;
+  margin: 5px;
+  padding: 5px 10px;
 }
 
 /* ##### CSS GRID ##### */
@@ -164,58 +192,55 @@ main h2 {
 @media only screen and (max-width: 768px) {
 
   /* ##### Navigation Bar ##### */
-.mobile-nav {
-  display: block;
-  position: fixed;
-  width: 100%;
-  overflow: hidden;
-  background-color: #FAF9F6;
-  position: relative;
-  border: 2px solid #000;
-  border-radius: 255px 15px 225px 15px/15px 225px 
-}
+  .mobile-nav {
+    display: block;
+    position: fixed;
+    width: 100%;
+    overflow: hidden;
+    background-color: #FAF9F6;
+    position: relative;
+    border: 2px solid #000;
+    border-radius: 255px 15px 225px 15px/15px 225px 
+  }
 
-#myLinks {
-  display: none;
-}
+  #myLinks {
+    display: none;
+  }
 
-/* Hide the links inside the navigation menu (except for logo/home) */
-.mobile-nav #myLinksMobile {
-  display: none;
-}
+  /* Hide the links inside the navigation menu (except for logo/home) */
+  .mobile-nav #myLinksMobile {
+    display: none;
+  }
 
-.mobile-nav a {
-  color: #000;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-  display: block;
-}
+  .mobile-nav a {
+    color: #000;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+    display: block;
+  }
 
-/* Style the hamburger menu */
-.mobile-nav a.icon {
-  display: block;
-  position: absolute;
-  right: 0;
-  top: 0;
-}
+  /* Style the hamburger menu */
+  .mobile-nav a.icon {
+    display: block;
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
 
-/* Add a grey background color on mouse-over */
-.mobile-nav a:hover {
-  /* background-color: #588157; */
-  color: #588157;
-  font-weight: bold;
-  text-decoration: underline;
-}
+  /* Add a grey background color on mouse-over */
+  .mobile-nav a:hover {
+    /* background-color: #588157; */
+    color: #588157;
+    font-weight: bold;
+    text-decoration: underline;
+  }
 
-/* Style the active link (or home/logo) */
-.active {
-  color: white;
-}
-/* ########## */
-
-
-
+  /* Style the active link (or home/logo) */
+  .active {
+    color: white;
+  }
+  /* ########## */
 
 
   .experience-container {
@@ -228,12 +253,11 @@ main h2 {
   .project .container {
     flex-direction: column;
   }
-  .project .image {
+  .project .project-image {
     width: 100%;
-    border: solid 2px red;
     margin: 0;
   }
-  .project .card {
+  .project .project-description {
     width: 100%;
   }
 }
